<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".SettingsFragment" >

    <Space android:layout_marginTop="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextViewLabelWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/model_width" />

        <TextView
            android:id="@+id/TextViewModelWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/TextViewLabelHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/model_height" />

        <TextView
            android:id="@+id/TextViewModelHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/TextViewModelLabelsChannels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/model_channels" />

        <TextView
            android:id="@+id/TextViewModelChannels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"  />

    </TableRow>

    <Space android:layout_marginTop="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/TextViewCameraResolutions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera_resolution" />

        <Spinner
            android:id="@+id/SpinnerResolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"  />

    </TableRow>

    <Space android:layout_marginTop="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextViewUseNNAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/use_nnapi" />

        <Switch
            android:id="@+id/SwitchUseNNAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"  />

    </TableRow>

    <Space android:layout_marginTop="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextViewUseAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/use_audio" />

        <Switch
            android:id="@+id/SwitchUseAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextViewAudioLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audio_language" />

        <Spinner
            android:id="@+id/SpinnerLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"  />

    </TableRow>

    <Space android:layout_marginTop="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextViewThreadsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/threadlabel" />

        <Spinner
            android:id="@+id/SpinnerThreads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"  />

    </TableRow>

</TableLayout>