<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewLabelAppName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:text="@string/label_appname" />

            <TextView
                android:layout_weight="7"
                android:id="@+id/TextViewAppName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_weight="3"
                android:id="@+id/TextViewLabelAppVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/label_appversion" />

            <TextView
                android:layout_weight="7"
                android:id="@+id/TextViewAppVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/app_version" />

        </TableRow>

        <Space android:layout_marginTop="20dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="*">

            <TextView
                android:id="@+id/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:maxLines="20" />

        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ButtonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_dialog_email" />

</TableLayout>